style: fix horizontal scroll on mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -17,7 +17,8 @@ body {
 }
 
 img {
-  width: 400px;
+  width: 90vw;
+  max-width: 400px;
   height: 400px;
 }
 
@@ -50,7 +51,8 @@ main {
     textarea {
       padding: 1rem;
       height: 150px;
-      width: 400px;
+      width: 90vw;
+      max-width: 400px;
     }
 
     button {
@@ -67,7 +69,8 @@ main {
 
     .output-box {
       min-height: 100px;
-      width: 400px;
+      width: 90vw;
+      max-width: 400px;
       margin-top: 0.8rem;
       padding: 0.6rem;
       text-align: left;
